--- a/web/CSS/calendar.css
+++ b/web/CSS/calendar.css
@@ -68,8 +68,8 @@ td {
   z-index: 1;
   opacity: 0;
   transform: translateY(-10px);
-  animation: fadeInSlide 0.3s forwards;
-  border-top: none;
+  animation: fadeInSlide 0.5s forwards;
+  /* border-top: none; */
   min-width: 100px;
   min-height: 200px;
 }
@@ -153,12 +153,10 @@ td .day-number {
   position: fixed;
   right: 0;
   top: 0;
-  /* or set as needed */
   width: 15px;
   height: 15px;
   aspect-ratio: 1;
   padding: 5px;
-  /* optional */
   display: flex;
   align-items: center;
   justify-content: center;
