--- a/web/CSS/sidebar/sb_main.css
+++ b/web/CSS/sidebar/sb_main.css
@@ -28,6 +28,9 @@
     z-index: 5;
     display: flex;
     flex-direction: column;
+    position: relative;
+    margin-left: 0;
+    transition: margin-left .6s ease;
 }
 
 textarea {
@@ -55,4 +58,27 @@ textarea {
 .recipe-list h3 {
     font-size: 1.1rem;
     margin-bottom: 0.5rem;
+}
+
+.flag {
+    position: absolute;
+    right: -40px;
+    height: 40px;
+    width: 40px;
+    top: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--sidebar-bg);
+    backdrop-filter: opacity(0);
+    cursor: pointer;
+}
+
+.sidebar-hide {
+    height: 80%;
+    width: 80%;
+}
+
+.sidebar-disabled {
+    margin-left: -420px;
 }
