--- a/web/CSS/sidebar/right/newRecipe.css
+++ b/web/CSS/sidebar/right/newRecipe.css
@@ -20,6 +20,19 @@
     font-weight: 600;
 }
 
+.recipe-img-box {
+    height: 50px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: inset 0px 0px 0px 2px #9d9d9d;
+    border-radius: 5px;
+    padding: 8px;
+    font-family: Lato;
+    box-sizing: border-box;
+}
+
 textarea {
     resize: none;
 }
