--- a/web/CSS/items.css
+++ b/web/CSS/items.css
@@ -14,12 +14,12 @@
     overflow: hidden;
     position: relative;
     transition: all 0.2s ease-out;
-    transform-origin: 100% 100%;
+    transform-origin: 0% 100%;
 }
 
 .recipe-list h2 {
     margin: 0;
-    height: 30px;
+    /* height: 30px; */
     z-index: 5;
 }
 
@@ -33,6 +33,9 @@
     aspect-ratio: 1;
     border-radius: 5px;
     height: 68px;
+    align-self: center;
+    backdrop-filter: brightness(0.92);
+    object-fit: cover;
 }
 
 .drop-zone .food-img {
@@ -79,6 +82,11 @@
 .recipe-schedule h2 {
     margin-top: 0;
     margin-left: 0;
+}
+
+.recipe-schedule {
+    display: flex;
+    flex-direction: column;
 }
 
 .item-placed::before {
@@ -159,7 +167,7 @@ td p {
 
 .recipe-list .item:hover {
     transform: rotateZ(1deg);
-    transform-origin: 0% 50%;
+    transform-origin: 0% 0%;
     z-index: 5;
 }
 
