--- a/web/CSS/sidebar/sb_right.css
+++ b/web/CSS/sidebar/sb_right.css
@@ -2,7 +2,7 @@
     width: 400px;
     background-color: var(--sidebar-bg);
     padding: 1rem;
-    box-shadow: 5px 0 17px 0px rgb(171 171 171);
+    box-shadow: -3px 0 17px 0px rgb(171 171 171);
     z-index: 5;
     display: flex;
     flex-direction: column;
@@ -21,6 +21,15 @@
     background-color: var(--sidebar-bg);
     backdrop-filter: opacity(0);
     cursor: pointer;
+
+    transition: all 0.25s ease-out;
+    transform: none;
+    padding-right: 0;
+}
+
+.flag-right:hover {
+    transform: translateX(-7px);
+    padding-right: 7px;
 }
 
 .sidebar-hide {
@@ -46,7 +55,7 @@
     from {
         opacity: 0;
         transform: translateY(20px);
-        margin-bottom: -100%;
+        /* margin-bottom: -300%; */
     }
 
     to {
@@ -66,7 +75,7 @@
     to {
         opacity: 0;
         transform: translateY(20px);
-        margin-bottom: -100%;
+        /* margin-bottom: -300%; */
     }
 }
 
@@ -86,6 +95,32 @@
     display: none;
 }
 
+.shoppingListTab {
+    display: none;
+}
+
 .settingsTab {
     display: none;
+}
+
+.sidebarRight h3 {
+    margin-bottom: 5px;
+}
+
+.sidebarRight h4 {
+    margin: 5px 0px;
+    font-size: smaller;
+}
+
+.gen-btn {
+    transform: translateY(0);
+    box-shadow: none;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.gen-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 7px 15px 0px #a3a3a3;
+    ;
 }
