--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -1,8 +1,9 @@
 .todays-recipe {
-    background-color: #d9d9d95c;
-    padding: 5px;
+    padding: 10px;
     border-radius: 5px;
     border: 1px solid rgb(184, 184, 184);
+    box-shadow: 0px 0px 20px rgb(136 136 136 / 52%);
+    margin-bottom: 5px;
 }
 
 .todays-recipe h3,
@@ -55,4 +56,31 @@
     gap: 5px;
     display: flex;
     flex-direction: column;
+}
+
+.recipe-info {
+    margin-top: 5px;
+    gap: 5px;
+}
+
+.factoid {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    border-radius: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+    background-color: #cdcdcd7c;
+}
+
+.factoid h4,
+.factoid p {
+    margin: 0;
+    max-width: fit-content;
+}
+
+.tr-template {
+    display: none;
 }
