--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -1,9 +1,10 @@
 .todays-recipe {
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid rgb(184, 184, 184);
+    border: 1px solid rgb(141, 141, 141);
     box-shadow: 0px 0px 20px rgb(136 136 136 / 52%);
     margin-bottom: 5px;
+    background: #ffffff6e;
 }
 
 .todays-recipe h3,
@@ -73,6 +74,7 @@
     padding: 5px;
     box-sizing: border-box;
     background-color: #cdcdcd7c;
+    border: 1px solid #a7a7a7;
 }
 
 .factoid h4,
