--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -100,6 +100,7 @@
 .recipe-scroll {
     overflow-y: scroll;
     scrollbar-color: #00000057 #ffffff00;
+    padding-bottom: 20px;
 }
 
 .todaysRecipeTab {
