--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -90,12 +90,29 @@
 
 .todaysRecipeTab summary {
     margin: 5px 0;
-    padding: 5px;
+    padding: 5px 10px;
     box-sizing: border-box;
-    width: fit-content;
+    width: auto;
     background-color: #ffffff6e;
     border: 1px solid #a7a7a7;
     border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.todaysRecipeTab summary::after {
+    content: '';
+    width: 18px;
+    height: 10px;
+    background: url('https://uploads.sitepoint.com/wp-content/uploads/2023/10/1697699669arrow.svg') no-repeat;
+    background-size: cover;
+    transition: 0.2s;
+}
+
+.todaysRecipeTab details[open]>summary::after {
+    transform: rotate(180deg);
 }
 
 .recipe-scroll {
