--- a/web/CSS/sidebar/right/newRecipe.css
+++ b/web/CSS/sidebar/right/newRecipe.css
@@ -56,13 +56,16 @@ textarea {
 
 .gen-outer {
     display: flex;
+    position: relative;
 }
 
 .anim-icon {
     display: flex;
     position: absolute;
-    aspect-ratio: 1 / 1;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    aspect-ratio: 1 / 1;
     width: 30px;
     height: 30px;
     z-index: 10;
