--- a/web/CSS/sidebar/sb_main.css
+++ b/web/CSS/sidebar/sb_main.css
@@ -57,3 +57,9 @@
 .sidebar-disabled {
     margin-left: -420px;
 }
+
+.recipe-list {
+    overflow-y: scroll;
+    scrollbar-color: #00000057 #ffffff00;
+    padding-bottom: 20px;
+}
