--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -119,6 +119,7 @@
     overflow-y: scroll;
     scrollbar-color: #00000057 #ffffff00;
     padding-bottom: 20px;
+    overflow-x: hidden;
 }
 
 .todaysRecipeTab {
