--- a/web/CSS/sidebar/right/newRecipe.css
+++ b/web/CSS/sidebar/right/newRecipe.css
@@ -87,3 +87,8 @@ textarea {
 .generating-popup h3 {
     margin: 0;
 }
+
+.gen-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 7px 15px 0px #a3a3a3;
+}
