--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -24,21 +24,86 @@
     font-weight: 600;
 }
 
+.shoppingList {
+    width: 100%;
+    height: 100%;
+}
 
-.timeframe-form button {
+.shoppingList h3,
+.shoppingList h4 {
+    margin: 0;
+}
+
+.ingredient {
+    padding: 5px 10px;
+    box-sizing: border-box;
+    border: 1px solid rgb(153, 153, 153);
+    border-radius: 5px;
+    height: 50px;
+    width: 100%;
+    background-color: #cbcbcb;
+    gap: 5px;
+    justify-content: space-between;
+}
+
+.ingredient input {
+    margin: 5px;
+    box-sizing: border-box;
+    width: 20px;
+    border: 1px solid black;
+    height: 100%;
+}
+
+.shoppingListTab {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.shoppingListTab button {
+    width: 100%;
+}
+
+.shoppingListBorder {
+    border: 1px solid #acabab;
+    display: flex;
     margin-top: 5px;
     border-radius: 5px;
-    border: 2px solid rgb(110, 110, 110);
-    height: 40px;
-    width: 100%;
-    background: linear-gradient(to bottom, #f8f8f8, transparent), linear-gradient(to top right, #c5c5c5, transparent);
-    font-family: Lato;
-    font-weight: 600;
-    transition: all .5s;
+    padding: 5px;
+    gap: 5px;
+    height: 50%;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    height: auto;
+    flex: 1 1 auto;
+    overflow-y: auto;
+}
+
+.list-generating {
+    filter: blur(7px);
+}
+
+.border-generating {
+    box-shadow: 0 0 20px 0px #00000061;
+}
+
+.tabs {
+    margin-top: 5px;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+}
+
+.tabs button {
+    width: 100px;
+    height: 25px;
+    border-radius: 5px;
+    border: 1px solid #acabab;
     cursor: pointer;
 }
 
-.timeframe-form button:hover {
-    transform: translateY(-2px);
-    box-shadow: 0px 7px 15px 0px #a3a3a3;
+.checkbox-div {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
