--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -25,8 +25,11 @@
 }
 
 .shoppingList {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    gap: 5px;
 }
 
 .shoppingList h3,
@@ -106,4 +109,19 @@
     display: flex;
     align-items: center;
     gap: 5px;
+}
+
+.i-template {
+    /* display: none; */
+}
+
+.i-left {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.i-left i {
+    width: 20px;
+    height: 20px;
 }
