--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -37,6 +37,10 @@
     margin: 0;
 }
 
+.listGenBtn {
+    width: 100%;
+}
+
 .ingredient {
     padding: 5px 10px;
     box-sizing: border-box;
@@ -61,10 +65,6 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-}
-
-.shoppingListTab button {
-    width: 100%;
 }
 
 .shoppingListBorder {
@@ -97,13 +97,26 @@
     justify-content: center;
 }
 
-.tabs button {
+.check-btn {
     width: 100px;
     height: 25px;
     border-radius: 5px;
     border: 1px solid #acabab;
     cursor: pointer;
+    transition: all .3s;
 }
+
+.check-btn:hover {
+    width: 110px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.11);
+}
+
+.check-btn:active {
+    width: 105px;
+    box-shadow: 0px 0px 6px rrgba(0, 0, 0, 0.096);
+    background-color: rgb(214, 214, 214);
+}
+
 
 .checkbox-div {
     display: flex;
