--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -46,7 +46,7 @@
     box-sizing: border-box;
     border: 1px solid rgb(153, 153, 153);
     border-radius: 5px;
-    height: 50px;
+    height: fit-content;
     width: 100%;
     background-color: #cbcbcb;
     gap: 5px;
