--- a/web/CSS/calendar.css
+++ b/web/CSS/calendar.css
@@ -1,17 +1,3 @@
-:root {
-  --main-bg: #ffffff;
-  --main-text: #222222;
-  --accent-color: #525252;
-  --sidebar-bg: #f4f4f465;
-  --calendar-bg: #ffffff;
-  --calendar-today: #fffbda85;
-  --calendar-border: #dddddd;
-  --event-color: #f3f3f3;
-  --calendar-top: #dfdfdf;
-  --calendar-blank: #ebebeb;
-  --calendar-top-dropshadow: #b6b6b6;
-}
-
 html,
 body {
   margin: 0;
@@ -22,7 +8,7 @@ body {
 body {
   margin: 0;
   font-family: Lato, sans-serif;
-  background: linear-gradient(#efefef, transparent), linear-gradient(to top left, #0c0c0c, transparent), linear-gradient(to top right, #939eab, transparent);
+  background: linear-gradient(#efefef, transparent), linear-gradient(to top left, #0c0c0c, transparent), linear-gradient(to top right, var(--main-bg), transparent);
   color: var(--main-text);
   display: flex;
   height: 100vh;
@@ -50,7 +36,7 @@ body {
 
 .main-content h3 {
   text-align: center;
-  color: rgb(87, 87, 87);
+  color: var(--main-text);
   font-size: 2.5rem;
   margin: 26px;
 }
