--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -147,16 +147,6 @@
 }
 
 .qrGenBtn {
-    border-radius: 5px;
-    border: 1px solid rgb(148, 148, 148);
-    padding: 5px;
-    box-sizing: border-box;
-    transition: all .3s;
-    width: 200px;
-    cursor: pointer;
-}
-
-.qrGenBtn:hover {
-    background-color: #dddddd;
-    width: 215px;
+    margin: 0;
+    height: 30px;
 }
