--- a/web/CSS/sidebar/sb_right.css
+++ b/web/CSS/sidebar/sb_right.css
@@ -2,7 +2,7 @@
     width: 450px;
     background-color: var(--sidebar-bg);
     padding: 1rem;
-    box-shadow: -3px 0 17px 0px rgb(171 171 171);
+    box-shadow: -3px 0 17px 0px var(--sidebar-shadow);
     z-index: 5;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--sidebar-bg);
+    background-color: var(--flag);
     backdrop-filter: opacity(0);
     cursor: pointer;
 
@@ -27,7 +27,7 @@
     padding-right: 0;
 }
 
-.flag-right:hover {
+.flag-nt:hover {
     transform: translateX(-7px);
     padding-right: 7px;
 }
@@ -117,7 +117,7 @@
     border-radius: 5px;
     border: 2px solid rgb(110, 110, 110);
     height: 40px;
-    background: linear-gradient(to bottom, #f8f8f8, transparent), linear-gradient(to top right, #c5c5c5, transparent);
+    background: linear-gradient(to bottom, #f8f8f8, transparent), linear-gradient(to top right, var(--main-color), transparent);
     font-family: Lato;
     font-weight: 600;
     transition: all .5s;
@@ -126,7 +126,7 @@
 
 .button:hover {
     transform: translateY(-2px);
-    box-shadow: 0px 7px 15px 0px #a3a3a3;
+    box-shadow: 0px 7px 15px 0px var(--calendar-top-dropshadow);
 }
 
 .button:active {
