--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -48,7 +48,7 @@
     border-radius: 5px;
     height: fit-content;
     width: 100%;
-    background-color: #cbcbcb;
+    background-color: #cbcbcb80;
     gap: 5px;
     justify-content: space-between;
 }
