--- a/web/CSS/sidebar/right/settings.css
+++ b/web/CSS/sidebar/right/settings.css
@@ -6,7 +6,7 @@
   padding: 10px;
   box-sizing: border-box;
   border-radius: 5px;
-  border: 1px solid rgb(121, 121, 121);
+  border: 1px solid var(--main-border-color);
 }
 
 .colorSettings div {
