--- a/web/CSS/sidebar/sb_right.css
+++ b/web/CSS/sidebar/sb_right.css
@@ -115,7 +115,7 @@
 .button {
     margin-top: 5px;
     border-radius: 5px;
-    border: 2px solid rgb(110, 110, 110);
+    border: 2px solid var(--main-border-color);
     height: 40px;
     background: linear-gradient(to bottom, #f8f8f8, transparent), linear-gradient(to top right, var(--main-color), transparent);
     font-family: Lato;
@@ -126,7 +126,7 @@
 
 .button:hover {
     transform: translateY(-2px);
-    box-shadow: 0px 7px 15px 0px var(--calendar-top-dropshadow);
+    box-shadow: 0px 7px 15px 0px var(--dropshadow);
 }
 
 .button:active {
