--- a/web/CSS/qr.css
+++ b/web/CSS/qr.css
@@ -21,6 +21,7 @@
     opacity: 1;
     z-index: 100;
     box-shadow: 0 0 0 max(100vh, 100vw) rgba(0, 0, 0, .3);
+    background-color: var(--calendar-blank);
 }
 
 .qr-frame img {
