--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -65,6 +65,12 @@
     min-width: 20px;
 }
 
+.ingredient:has(input[type="checkbox"]:checked) {
+    filter: brightness(0.8);
+    backdrop-filter: brightness(.8);
+    opacity: 0.6;
+}
+
 .shoppingListTab {
     display: flex;
     flex-direction: column;
