--- a/web/CSS/items.css
+++ b/web/CSS/items.css
@@ -9,8 +9,8 @@
     display: flex;
     gap: 5px;
     border-style: solid;
-    border-width: 2px;
-    border-color: #bfbfbf;
+    border-width: 1px;
+    border-color: var(--main-border-color);
     overflow: hidden;
     position: relative;
     transition: all 0.2s ease-out;
@@ -55,7 +55,7 @@
     width: 100%;
     z-index: 200;
     overflow: hidden;
-    transition: background-color 0.4s ease-out;
+    transition: border 0.4s ease-out;
     box-sizing: border-box;
     min-width: fit-content;
 }
@@ -102,6 +102,8 @@
     min-height: 40px;
 }
 
+
+
 @keyframes fadeOutBackground {
     to {
         opacity: 0;
@@ -109,13 +111,15 @@
 }
 
 .item-placed {
-    /* animation: placementTransform 0.8s forwards; */
     background-color: var(--calendar-bg);
     box-shadow: 0px 0px 0px 0px #b49a9a;
     padding: 0px 0px;
     cursor: default;
     border-radius: 0px;
     font-size: 8px;
+    border: 1px solid var(--bc-clear);
+    transition: all 0.5s;
+    box-sizing: border-box;
 }
 
 
