--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -51,8 +51,11 @@
     height: fit-content;
     width: 100%;
     background-color: #ffffff3d;
-    gap: 5px;
     justify-content: space-between;
+    gap: 5px;
+    opacity: 0;
+    transform: rotateZ(2deg) translateX(-5px);
+    animation: show .6s .1s cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
 }
 
 .ingredient input {
@@ -188,5 +191,12 @@
 
     to {
         transform: rotateZ(720deg);
+    }
+}
+
+@keyframes show {
+    100% {
+        opacity: 1;
+        transform: none;
     }
 }
