--- a/web/CSS/sidebar/right/shoppingList.css
+++ b/web/CSS/sidebar/right/shoppingList.css
@@ -55,6 +55,7 @@
     gap: 5px;
     opacity: 0;
     transform: rotateZ(2deg) translateX(-5px);
+    transform-origin: 0% 0%;
     animation: show .6s .1s cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
 }
 
