--- a/web/CSS/qr.css
+++ b/web/CSS/qr.css
@@ -3,26 +3,28 @@
     background-color: rgb(230, 230, 230);
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) translateY(20px);
-    z-index: 500;
+    transform: translate(-50%, -50%) rotateX(-90deg);
+    transform-origin: top;
+    z-index: 0;
     padding: 15px;
     border-radius: 15px;
     box-shadow: 0 20px 150px rgba(0, 0, 0, 0.534);
     aspect-ratio: 1;
-    width: 25vh;
+    width: 30vh;
     justify-items: center;
-    transition: all .3s;
+    transition: all 0.3s, transform 0.5s ease-out;
     opacity: 0;
-    z-index: 0;
+    perspective: 1000px;
+    /* Optional on parent if you wrap */
+    backface-visibility: hidden;
 }
 
 .qr-frame.visible {
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) rotateX(0deg);
     opacity: 1;
     z-index: 100;
     box-shadow: 0 0 0 max(100vh, 100vw) rgba(0, 0, 0, .3);
     background-color: var(--calendar-blank);
-    width: 30vh;
 }
 
 .qr-frame img {
