--- a/web/CSS/qr.css
+++ b/web/CSS/qr.css
@@ -1,10 +1,14 @@
+body {
+    perspective: 200px;
+}
+
 .qr-frame {
     position: fixed;
     background-color: rgb(230, 230, 230);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotateX(-90deg);
-    transform-origin: top;
+    transform-origin: 50% 50%;
     z-index: 0;
     padding: 15px;
     border-radius: 15px;
