--- a/web/CSS/qr.css
+++ b/web/CSS/qr.css
@@ -1,7 +1,3 @@
-body {
-    perspective: 200px;
-}
-
 .qr-frame {
     position: fixed;
     background-color: rgb(230, 230, 230);
@@ -62,9 +58,38 @@ body {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    perspective: 70vh;
 }
 
 .qr-container img {
     border-radius: 10px;
     box-shadow: 0 0 15px #00000029;
+    transform-origin: top;
+    transform: rotateX(40deg);
+    opacity: 0;
+    transition: none;
+}
+
+.qr-container img.visible {
+    animation: swing-in 0.6s ease-out forwards;
+}
+
+@keyframes swing-in {
+    0% {
+        transform: rotateX(90deg);
+        opacity: 0;
+    }
+
+    60% {
+        transform: rotateX(-20deg);
+        opacity: 1;
+    }
+
+    80% {
+        transform: rotateX(10deg);
+    }
+
+    100% {
+        transform: rotateX(0deg);
+    }
 }
