--- a/web/CSS/qr.css
+++ b/web/CSS/qr.css
@@ -67,7 +67,7 @@
     transform-origin: top;
     transform: rotateX(40deg);
     opacity: 0;
-    transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55), all 0.4s ease-out;
+    transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55), opacity 0.4s ease-out;
 }
 
 .qr-container img.visible {
