--- a/web/CSS/global.css
+++ b/web/CSS/global.css
@@ -46,15 +46,18 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  padding: 0;
+  padding: 2px 3px;
   border: 0px solid #ffffff00;
   gap: 5px;
   transition: all 0.5s;
+  border-radius: 0px;
 }
 
 .link:hover {
   padding: 5px 15px;
   border: 1px solid var(--main-border-color);
+  border-radius: 20px;
+  box-shadow: 0px 3px 3px gray;
 }
 
 .footer h4 {
@@ -80,4 +83,21 @@
 
 .ionicon {
   stroke: var(--main-text);
+}
+
+.book-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin: 1em 1px;
+}
+
+.book-title h2 {
+  margin: 0;
+}
+
+.book-title .ionicon {
+  width: 100%;
+  height: 100%;
 }
