--- a/web/CSS/items.css
+++ b/web/CSS/items.css
@@ -138,6 +138,25 @@ td p {
     z-index: 5;
 }
 
+.settings-item {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: #ffffff73;
+    color: var(--text-dark);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 16px;
+    border: 1px solid gray;
+}
+
 @keyframes pDisabled {
     to {
         font-size: 1px;
