--- a/web/CSS/recipe_settings.css
+++ b/web/CSS/recipe_settings.css
@@ -1,25 +1,28 @@
-.qr-frame {
+.main-content {
+    perspective: 1500px;
+}
+
+.recipe-settings-frame {
     position: fixed;
     background-color: rgb(230, 230, 230);
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotateX(-90deg);
+    transform: translate(-50%, -50%) rotateX(-80deg);
     transform-origin: 50% 50%;
     z-index: 0;
     padding: 15px;
     border-radius: 15px;
     box-shadow: 0 20px 150px rgba(0, 0, 0, 0.534);
-    aspect-ratio: 1;
     width: 30vh;
+    height: fit-content;
     justify-items: center;
     transition: all 0.3s, transform 0.5s ease-out;
     opacity: 0;
-    perspective: 1000px;
-    /* Optional on parent if you wrap */
     backface-visibility: hidden;
+    z-index: 400;
 }
 
-.qr-frame.visible {
+.recipe-settings-frame.visible {
     transform: translate(-50%, -50%) rotateX(0deg);
     opacity: 1;
     z-index: 100;
@@ -27,21 +30,21 @@
     background-color: var(--calendar-blank);
 }
 
-.qr-frame img {
+.recipe-settings-frame img {
     width: 100%;
     height: 100%;
 }
 
-.qr-frame h3 {
+.recipe-settings-frame h3 {
     margin: 5px;
     font-size: 25px;
 }
 
-.qr-frame h4 {
+.recipe-settings-frame h4 {
     margin: 0;
 }
 
-.qr-icon {
+.rs-icon {
     position: fixed;
     top: 0%;
     left: 100%;
@@ -50,27 +53,4 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-}
-
-.qr-container {
-    padding: 5%;
-    padding-bottom: 0;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    perspective: 70vh;
-}
-
-.qr-container img {
-    border-radius: 10px;
-    box-shadow: 0 0 15px #00000029;
-    transform-origin: top;
-    transform: rotateX(40deg);
-    opacity: 0;
-    transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55), all 0.4s ease-out;
-}
-
-.qr-container img.visible {
-    transform: rotateX(0deg);
-    opacity: 1;
 }
