--- a/web/CSS/recipe_settings.css
+++ b/web/CSS/recipe_settings.css
@@ -16,7 +16,7 @@
     width: 30vh;
     height: fit-content;
     justify-items: center;
-    transition: all 0.3s, transform 0.5s ease-out;
+    transition: all 0.3s, transform 0.5s cubic-bezier(0.29, 1.83, 0.48, 0.98);
     opacity: 0;
     backface-visibility: hidden;
     z-index: 400;
