--- a/web/CSS/recipe_settings.css
+++ b/web/CSS/recipe_settings.css
@@ -3,6 +3,7 @@
 }
 
 .recipe-settings-frame {
+    display: flex;
     position: fixed;
     background-color: rgb(230, 230, 230);
     top: 50%;
@@ -20,6 +21,7 @@
     opacity: 0;
     backface-visibility: hidden;
     z-index: 400;
+    flex-direction: column;
 }
 
 .recipe-settings-frame.visible {
