--- a/web/CSS/calendar.css
+++ b/web/CSS/calendar.css
@@ -168,6 +168,44 @@ td .day-number {
   color: #4e4e4e;
 }
 
+.note {
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
+
+  opacity: 0;
+  position: fixed;
+  left: 100%;
+  top: 100%;
+  z-index: 201;
+  backdrop-filter: blur(5px);
+  border: 1px solid var(--main-border-color);
+  transform: translateX(-30px) translateY(-30px) rotate(20deg);
+  transition: all .3s ease-out;
+  box-sizing: border-box;
+  cursor: default;
+  display: none;
+}
+
+.note.visible {
+  display: block;
+  opacity: 1;
+  transform: translateX(-30px) translateY(-30px);
+}
+
+.note:hover {
+  cursor: pointer;
+  transform: translateX(-30px) translateY(-32px);
+}
+
+.note ion-icon {
+  position: relative;
+  top: 1px;
+  left: 2px;
+  width: 20px;
+  height: 20px;
+}
+
 @keyframes fadeInSlide {
   to {
     opacity: 1;
