--- a/web/CSS/items.css
+++ b/web/CSS/items.css
@@ -52,7 +52,7 @@
     max-width: 100%;
     height: fit-content;
     width: 100%;
-    z-index: 200;
+    z-index: 100;
     overflow: hidden;
     transition: border 0.4s ease-out;
     box-sizing: border-box;
@@ -99,6 +99,7 @@
     padding-top: 1.2rem;
     height: calc(100% - 1.2rem);
     min-height: 40px;
+    font-size: .85rem;
 }
 
 .item-placed {
