--- a/web/CSS/recipe_settings.css
+++ b/web/CSS/recipe_settings.css
@@ -2,13 +2,14 @@
     perspective: 1500px;
 }
 
-.recipe-settings-frame {
+.recipe-settings-frame,
+.note-frame {
     display: flex;
     position: fixed;
     background-color: rgb(230, 230, 230);
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotateX(-80deg);
+    transform: translate(-50%, -50%) rotateX(-80deg) rotateZ(10deg);
     transform-origin: 50% 50%;
     z-index: 0;
     padding: 15px;
@@ -24,8 +25,9 @@
     flex-direction: column;
 }
 
-.recipe-settings-frame.visible {
-    transform: translate(-50%, -50%) rotateX(0deg);
+.recipe-settings-frame.visible,
+.note-frame.visible {
+    transform: translate(-50%, -50%);
     opacity: 1;
     z-index: 100;
     box-shadow: 0 0 0 max(100vh, 100vw) rgba(0, 0, 0, .3);
@@ -37,18 +39,28 @@
     height: 100%;
 }
 
-.recipe-settings-frame h3 {
+.recipe-settings-frame,
+.note-frame h3 {
     margin: 5px;
     font-size: 25px;
 }
 
-.recipe-settings-frame h4 {
+.recipe-settings-frame,
+.note-frame h4 {
     margin: 0;
     margin-bottom: 5px;
     text-align: center;
 }
 
-.rs-icon {
+.note-frame textarea {
+    border-radius: 5px;
+    border: 2px solid var(--main-border-color);
+    box-shadow: none;
+    margin-top: 5px;
+}
+
+.rs-icon,
+.nf-icon {
     position: fixed;
     top: 0%;
     left: 100%;
