--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -134,7 +134,7 @@
 }
 
 .todaysRecipeTab {
-    height: 100vh;
+    height: calc(100% - 38px) !important;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -146,7 +146,9 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
-    top: 100%
+    bottom: 0;
+    position: fixed;
+    align-self: center;
 }
 
 .recipe-footer h4 {
