--- a/web/CSS/sidebar/right/todaysRecipe.css
+++ b/web/CSS/sidebar/right/todaysRecipe.css
@@ -180,6 +180,7 @@
     padding: 5px 20px;
     box-shadow: 0px 7px 7px var(--dropshadow);
     transform: translateY(-1px);
+    cursor: pointer;
 }
 
 .td-website:active {
