--- a/web/CSS/calendar.css
+++ b/web/CSS/calendar.css
@@ -121,7 +121,7 @@ td .day-number {
   z-index: inherit
 }
 
-.title {
+.title-row {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -133,7 +133,6 @@ td .day-number {
   height: 1.2rem;
   cursor: pointer;
   transition: all 0.5s ease;
-
 }
 
 .title ion-icon:hover {
@@ -141,8 +140,20 @@ td .day-number {
   opacity: 1;
 }
 
+.title {
+  margin: 20px;
+}
+
 #monthName {
   width: 200px;
+  margin: 0;
+}
+
+.year {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .today {
@@ -168,7 +179,7 @@ td .day-number {
   color: #4e4e4e;
 }
 
-.note {
+.dayActionBtn {
   width: 25px;
   height: 25px;
   border-radius: 5px;
@@ -178,13 +189,19 @@ td .day-number {
   left: 100%;
   top: 100%;
   z-index: 201;
-  backdrop-filter: blur(5px);
   border: 1px solid var(--main-border-color);
   transform: translateX(-30px) translateY(-30px) rotate(20deg);
   transition: all .3s ease-out;
   box-sizing: border-box;
   cursor: default;
   display: none;
+  background-color: var(--calendar-bg);
+}
+
+.importIcon.visible {
+  display: block;
+  opacity: 1;
+  transform: translateX(-58px) translateY(-30px);
 }
 
 .note.visible {
@@ -198,7 +215,12 @@ td .day-number {
   transform: translateX(-30px) translateY(-32px);
 }
 
-.note ion-icon {
+.importIcon:hover {
+  cursor: pointer;
+  transform: translateX(-58px) translateY(-32px);
+}
+
+.dayActionBtn ion-icon {
   position: relative;
   top: 1px;
   left: 2px;
