--- a/web/CSS/items.css
+++ b/web/CSS/items.css
@@ -143,7 +143,7 @@ td p {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    background: #ffffff73;
+    background: var(--calendar-bg);
     color: var(--text-dark);
     border-radius: 50%;
     width: 30px;
